--- a/questionier/questionier.html
+++ b/questionier/questionier.html
@@ -19,8 +19,8 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
             gap: 50px;
+            padding: 20px;
         }
 
         .radio-group {
